--- a/EmployeeDB/package.json
+++ b/EmployeeDB/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "express": "3.1.0",
-    "jade": "*",
+    "jade": "0.28.2",
     "stylus": "*",
-    "mongodb": ">= 0.9.6-7"
+    "mongodb": "1.2.14"
   }
 }
